simulating lidar sensor

--- a/libs/CMakeLists.txt
+++ b/libs/CMakeLists.txt
@@ -10,6 +10,7 @@ find_package(OpenCV  REQUIRED)
 add_library(robots SHARED robots.cpp)
 add_library(map SHARED map.cpp)
 add_library(visualize SHARED visualize.cpp)
+add_library(lidar SHARED lidar.cpp)
 
 
 target_link_libraries(robots PUBLIC ${YAML_CPP_LIBRARIES} )
@@ -21,6 +22,7 @@ target_include_directories(map PUBLIC ${YAML_CPP_INCLUDE_DIR})
 target_link_libraries(visualize PUBLIC ${YAML_CPP_LIBRARIES} ${OpenCV_LIBS})
 target_include_directories(visualize PUBLIC ${YAML_CPP_INCLUDE_DIR})
 
+target_link_libraries(lidar PUBLIC  ${OpenCV_LIBS})
 
 target_include_directories(robots PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
