--- a/config/config.yaml
+++ b/config/config.yaml
@@ -9,14 +9,14 @@ robots:
   - name: "Bot1"
     frame_id: "map"
     initial_pose:
-      x: 8.0
+      x: 6.0
       y: 8.0
-      theta: -3.142
+      theta: -1.57
     dimensions:
       wheel_r: 0.5
     color:
-      r: 1.0
-      g: 0.0
+      r: 0.0
+      g: 1.0
       b: 0.0
       a: 1.0
     lidar:
@@ -25,5 +25,21 @@ robots:
       max_range: 5.0
     max_vel: 1
 
-
-
+  - name: "Bot2"
+    frame_id: "map"
+    initial_pose:
+      x: 4.0
+      y: 2.0
+      theta: 3.142
+    dimensions:
+      wheel_r: 1
+    color:
+      r: 0.0
+      g: 0.0
+      b: 1.0
+      a: 1.0
+    lidar:
+      num_beams: 200
+      min_range: 0.1
+      max_range: 5.0
+    max_vel: 1
