--- a/maps/cappero_map.yaml
+++ b/maps/cappero_map.yaml
@@ -1,6 +1,6 @@
-image: map.pgm
+image: cappero.pgm
 resolution: 0.5
-origin: [-166.75, -146, 0.000000]
+origin: [-461.5, -211.25, 0.000000]
 negate: 0
 occupied_thresh: 0.65
 free_thresh: 0.196
