--- a/param/costmap_common_params.yaml
+++ b/param/costmap_common_params.yaml
@@ -1,13 +1,13 @@
 obstacle_range: 3.0
-raytrace_range: 1
+raytrace_range: 4.0
 
-footprint: [[-0.25, -0.1], [-0.25, 0.1], [0.25, 0.1], [0.25, -0.1]]
+#footprint: [[-0.25, -0.1], [-0.25, 0.1], [0.25, 0.1], [0.25, -0.1]]
 #scaling_factors : [0.2, 0.5]
-#robot_radius: 0.5
+robot_radius: 1.0
 
 inflation_radius: 1.0
 cost_scaling_factor: 1.0
 
 map_type: costmap
 observation_sources: scan
-scan: {sensor_frame: scan_frame, data_type: LaserScan, topic: scan, marking: true, clearing: true}
+scan: {sensor_frame: Bot1_scan_frame, data_type: LaserScan, topic: Bot1_scan, marking: true, clearing: true}
