--- a/config/config.yaml
+++ b/config/config.yaml
@@ -9,11 +9,11 @@ robots:
   - name: "Bot1"
     frame_id: "map"
     initial_pose:
-      x: 7.5
-      y: -110.0
+      x: 7.0
+      y: -11.0
       theta: -1.57
     dimensions:
-      wheel_r: 4
+      wheel_r: 3
     color:
       r: 0.0
       g: 1.0
@@ -28,8 +28,27 @@ robots:
   - name: "Bot2"
     frame_id: "map"
     initial_pose:
-      x: -34.0
-      y: -110.0
+      x: -3.0
+      y: -21.0
+      theta: 3.142
+    dimensions:
+      wheel_r: 4
+    color:
+      r: 0.0
+      g: 0.0
+      b: 1.0
+      a: 1.0
+    lidar:
+      num_beams: 200
+      min_range: 0.1
+      max_range: 60.0
+    max_vel: 1
+    
+  - name: "Bot3"
+    frame_id: "map"
+    initial_pose:
+      x: -22.0
+      y: -21.0
       theta: 3.142
     dimensions:
       wheel_r: 4
